Сверстан блок header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
       <link href="./pages/index.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="page">
+      <header class="header">
+          <img src="./images/header-logo.svg" alt="Россия" class="header__logo">
+          <nav class="header__lang-links">
+            <a href="#" target="_blank" class="header__lang-link" lang="en">Ru</a>
+            <a href="#" target="_blank" class="header__lang-link" lang="en">En</a>
+          </nav>
+      </header>
 
     </body>
 </html>
