--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
       <footer class="footer">
         <nav class="footer__links">
           <ul class="footer__link-items">
-            <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
-            <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
-            <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
-            <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
-            <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
+            <li class="footer__item"><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
+            <li class="footer__item"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
+            <li class="footer__item"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
+            <li class="footer__item"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
+            <li class="footer__item"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
           </ul>
         </nav>
         <p class="footer__copyright">&copy; 2020. Сандриния Гребенцова</p>
