Добавлен <main>, исправлен logo, header__link

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     </head>
 
     <body class="page">
-      <main class="main">
-        <header class="header">
-            <img src="./images/header-logo.svg" alt="Россия" class="header__logo">
-            <div class="header__lang-links">
-              <a href="https://sandriniia.github.io/russian-travel/" class="header__lang-link" lang="ru">Ru</a>
-              <a href="#" class="header__lang-link" lang="en">En</a>
-            </div>
-        </header>
+      <header class="header">
+          <img src="./images/header-logo.svg" alt="Россия" class="header__logo">
+          <div class="header__lang-links">
+            <a href="https://sandriniia.github.io/russian-travel/" class="header__lang-link header__lang-link_active">Ru</a>
+            <a href="#" class="header__lang-link">En</a>
+          </div>
+      </header>
+
+      <main class="content">
 
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
@@ -136,20 +137,21 @@
         </a>
 
       </section>
-
-      <footer class="footer">
-        <nav class="footer__links">
-          <ul class="footer__link-items">
-            <li class="footer__item"><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
-            <li class="footer__item"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
-            <li class="footer__item"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
-            <li class="footer__item"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
-            <li class="footer__item"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
-          </ul>
-        </nav>
-        <p class="footer__copyright">&copy; 2020. Сандриния Гребенцова</p>
-      </footer>
     </main>
+
+    <footer class="footer">
+      <nav class="footer__links">
+        <ul class="footer__link-items">
+          <li class="footer__item"><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
+          <li class="footer__item"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
+          <li class="footer__item"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
+          <li class="footer__item"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
+          <li class="footer__item"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
+        </ul>
+      </nav>
+      <p class="footer__copyright">&copy; 2020. Сандриния Гребенцова</p>
+    </footer>
+    
 
     </body>
 </html>
